--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ packages = [
 python = ">=3.9"
 singer-sdk = { version="~=0.41.0", extras = [] }
 fs-s3fs = { version = "~=1.1.1", optional = true }
+xmltodict = "^0.14.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8"
